Fixes issue where the wait spinner would be squashed by a disconnected player with a very long name.

--- a/src/Draw/Client/Components/WaitSpinner.razor.css
+++ b/src/Draw/Client/Components/WaitSpinner.razor.css
@@ -3,6 +3,7 @@
     border: 12px solid #ffffff33;
     border-radius: 50%;
     width: 50px;
+    min-width: 50px;
     height: 50px;
 }
 
